Correção de conflitos.